--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ a:hover{color:#00f;}
 	<form id="city_a" action="getcity.php" method="post">
 		<fieldset>
 			<legend>默认</legend>
-			<p>省份：<select class="province" name="province"></select></p>
+			<p>省份：<select class="province" disabled="disabled" name="province"></select></p>
 			<p>城市：<select class="city" disabled="disabled" name="city"></select></p>
 			<p>地区：<select class="area" disabled="disabled" name="area"></select></p>
 			<p><button type="submit">提 交</button></p>
@@ -34,15 +34,15 @@ a:hover{color:#00f;}
 	<fieldset id="city_b">
 		<legend>设置默认值及选项标题</legend>
 		<p>所在地区：
-			<select class="province" data-val="浙江" data-title="选择省"></select>
-			<select class="city" data-val="杭州" data-title="选择市" disabled="disabled"></select>
-			<select class="area" data-val="西湖区" data-title="选择地区" disabled="disabled"></select>
+			<select class="province" data-title="选择省" data-val="浙江省" disabled="disabled"></select>
+			<select class="city" data-title="选择市" data-val="杭州市" disabled="disabled"></select>
+			<select class="area" data-title="选择地区" data-val="西湖区" disabled="disabled"></select>
 		</p>
 	</fieldset>
 	
 	<fieldset id="city_c">
-		<legend>多级选项</legend>
-		<p>一：<select class="first"></select></p>
+		<legend>自定义选项</legend>
+		<p>一：<select class="first" disabled="disabled"></select></p>
 		<p>二：<select class="second" disabled="disabled"></select></p>
 		<p>三：<select class="third" disabled="disabled"></select></p>
 		<p>四：<select class="fourth" disabled="disabled"></select></p>
@@ -60,23 +60,111 @@ a:hover{color:#00f;}
 	<p>Released under the MIT license</p>
 </div>
 
-<script src="js/jquery-1.4.4.min.js"></script>
+<script src="js/jquery-1.7.2.min.js"></script>
 <script src="js/jquery.cxselect.min.js"></script>
 <script>
-$.cxSelect.defaults.url="js/city.min.js";
+$.cxSelect.defaults.url = "js/cityData.min.json";
 
 $("#city_a").cxSelect({
-	selects:["province","city","area"]
+	selects : ["province","city","area"]
 });
 
 $("#city_b").cxSelect({
-	selects:["province","city","area"],
-	nodata:"none"
+	selects : ["province", "city", "area"],
+	nodata : "none"
 });
 
 $("#city_c").cxSelect({
-	url:"js/test.js",
-	selects:["first","second","third","fourth","fifth"]
+	selects : ["first", "second", "third", "fourth", "fifth"],
+	required : true,
+	url : [
+		{"n" : "第一级 >", "s" : [
+			{"n" : "第二级 >", "s" : [
+				{"n" : "第三级 >", "s" : [
+					{"n" : "第四级 >", "s" : [
+						{"n" : "第五级 >", "s" : [
+							{"n" : "第六级 >", "s" : [
+								{"n" : "第七级 >", "s" : [
+									{"n" : "第七级 >", "s" : [
+										{"n" : "第八级 >", "s" : [
+											{"n" : "第九级 >", "s" : [
+												{"n" : "第十级"}
+											]}
+										]}
+									]}
+								]}
+							]}
+						]}
+					]}
+				]}
+			]}
+		]},
+		{"n" : "数字 >", "s" : [
+			{"n" : "骰子 >", "s" : [
+				{"n" : "小", "s" : [
+					{"n" : "4"},
+					{"n" : "5"},
+					{"n" : "6"},
+					{"n" : "7"},
+					{"n" : "8"},
+					{"n" : "9"},
+					{"n" : "10"}
+				]},
+				{"n" : "大", "s" : [
+					{"n" : "11"},
+					{"n" : "12"},
+					{"n" : "13"},
+					{"n" : "14"},
+					{"n" : "15"},
+					{"n" : "16"},
+					{"n" : "17"}
+				]}
+			]},
+			{"n" : "百位", "s" : [
+				{"n" : "100"},
+				{"n" : "200"},
+				{"n" : "300"},
+				{"n" : "400"},
+				{"n" : "500"},
+				{"n" : "600"},
+				{"n" : "700"},
+				{"n" : "800"},
+				{"n" : "900"}
+			]},
+			{"n" : "千位", "s" : [
+				{"n" : "1000"},
+				{"n" : "2000"},
+				{"n" : "3000"},
+				{"n" : "4000"},
+				{"n" : "5000"},
+				{"n" : "6000"},
+				{"n" : "7000"},
+				{"n" : "8000"},
+				{"n" : "9000"}
+			]}
+		]},
+		{"n" : "字母 >", "s" : [
+			{"n" : "大写 >", "s" : [
+				{"n" : "A"},
+				{"n" : "B"},
+				{"n" : "C"},
+				{"n" : "D"},
+				{"n" : "E"},
+				{"n" : "F"},
+				{"n" : "G"}
+			]},
+			{"n" : "小写 >","s" : [
+				{"n" : "a"},
+				{"n" : "b"},
+				{"n" : "c"},
+				{"n" : "d"},
+				{"n" : "e"},
+				{"n" : "f"},
+				{"n" : "g"}
+			]}
+		]},
+		{"n" : "无子级"}
+	]
 });
 </script>
 </body>
