--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ a:hover{color:#00f;}
 	<fieldset id="city_b">
 		<legend>设置默认值及选项标题</legend>
 		<p>所在地区：
-			<select class="province" data-title="选择省" data-val="浙江省" disabled="disabled"></select>
-			<select class="city" data-title="选择市" data-val="杭州市" disabled="disabled"></select>
-			<select class="area" data-title="选择地区" data-val="西湖区" disabled="disabled"></select>
+			<select class="province" data-value="浙江省" data-first-title="选择省" disabled="disabled"></select>
+			<select class="city" data-value="杭州市" data-first-title="选择市" disabled="disabled"></select>
+			<select class="area" data-value="西湖区" data-first-title="选择地区" disabled="disabled"></select>
 		</p>
 	</fieldset>
 	
