--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ a:hover{color:#00f;}
 	
 	<fieldset id="city_c">
 		<legend>自定义选项</legend>
-		<p>一：<select class="first" disabled="disabled"></select></p>
-		<p>二：<select class="second" disabled="disabled"></select></p>
+		<p>一：<select class="first" data-value="Boolean" disabled="disabled"></select></p>
+		<p>二：<select class="second" data-value="0" disabled="disabled"></select></p>
 		<p>三：<select class="third" disabled="disabled"></select></p>
 		<p>四：<select class="fourth" disabled="disabled"></select></p>
 		<p>五：<select class="fifth" disabled="disabled"></select></p>
@@ -78,18 +78,16 @@ $("#city_c").cxSelect({
 	selects : ["first", "second", "third", "fourth", "fifth"],
 	required : true,
 	url : [
-		{"n" : "第一级 >", "s" : [
-			{"n" : "第二级 >", "s" : [
-				{"n" : "第三级 >", "s" : [
-					{"n" : "第四级 >", "s" : [
-						{"n" : "第五级 >", "s" : [
-							{"n" : "第六级 >", "s" : [
-								{"n" : "第七级 >", "s" : [
-									{"n" : "第七级 >", "s" : [
-										{"n" : "第八级 >", "s" : [
-											{"n" : "第九级 >", "s" : [
-												{"n" : "第十级"}
-											]}
+		{"v" : 1, "n" : "第一级 >", "s" : [
+			{"v" : 2, "n" : "第二级 >", "s" : [
+				{"v" : 3, "n" : "第三级 >", "s" : [
+					{"v" : 4, "n" : "第四级 >", "s" : [
+						{"v" : 5, "n" : "第五级 >", "s" : [
+							{"v" : 6, "n" : "第六级 >", "s" : [
+								{"v" : 7, "n" : "第七级 >", "s" : [
+									{"v" : 8, "n" : "第八级 >", "s" : [
+										{"v" : 9, "n" : "第九级 >", "s" : [
+											{"v" : 10, "n" : "第十级"}
 										]}
 									]}
 								]}
@@ -99,9 +97,9 @@ $("#city_c").cxSelect({
 				]}
 			]}
 		]},
-		{"n" : "数字 >", "s" : [
-			{"n" : "骰子 >", "s" : [
-				{"n" : "小", "s" : [
+		{"v" : "Number", "n" : "数字 >", "s" : [
+			{"v" : "Dice", "n" : "骰子 >", "s" : [
+				{"v" : "Small", "n" : "小", "s" : [
 					{"n" : "4"},
 					{"n" : "5"},
 					{"n" : "6"},
@@ -110,7 +108,7 @@ $("#city_c").cxSelect({
 					{"n" : "9"},
 					{"n" : "10"}
 				]},
-				{"n" : "大", "s" : [
+				{"v" : "Big", "n" : "大", "s" : [
 					{"n" : "11"},
 					{"n" : "12"},
 					{"n" : "13"},
@@ -120,7 +118,7 @@ $("#city_c").cxSelect({
 					{"n" : "17"}
 				]}
 			]},
-			{"n" : "百位", "s" : [
+			{"v" : "Hundred", "n" : "百位", "s" : [
 				{"n" : "100"},
 				{"n" : "200"},
 				{"n" : "300"},
@@ -131,7 +129,7 @@ $("#city_c").cxSelect({
 				{"n" : "800"},
 				{"n" : "900"}
 			]},
-			{"n" : "千位", "s" : [
+			{"v" : "Thousand", "n" : "千位", "s" : [
 				{"n" : "1000"},
 				{"n" : "2000"},
 				{"n" : "3000"},
@@ -143,8 +141,8 @@ $("#city_c").cxSelect({
 				{"n" : "9000"}
 			]}
 		]},
-		{"n" : "字母 >", "s" : [
-			{"n" : "大写 >", "s" : [
+		{"v" : "ABC", "n" : "字母 >", "s" : [
+			{"v" : "Upper case", "n" : "大写 >", "s" : [
 				{"n" : "A"},
 				{"n" : "B"},
 				{"n" : "C"},
@@ -153,7 +151,7 @@ $("#city_c").cxSelect({
 				{"n" : "F"},
 				{"n" : "G"}
 			]},
-			{"n" : "小写 >","s" : [
+			{"v" : "Lower case", "n" : "小写 >","s" : [
 				{"n" : "a"},
 				{"n" : "b"},
 				{"n" : "c"},
@@ -162,6 +160,12 @@ $("#city_c").cxSelect({
 				{"n" : "f"},
 				{"n" : "g"}
 			]}
+		]},
+		{"v" : "Boolean","n" : "真假 >", "s" : [
+			{"v":true ,"n" : "真 (Ture)"},
+			{"v":false ,"n" : "假 (False)"},
+			{"v":1 ,"n" : "真 (1)"},
+			{"v":0 ,"n" : "假 (0)"}
 		]},
 		{"n" : "无子级"}
 	]
