--- a/demo/api.html
+++ b/demo/api.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>cxSelect 联动下拉菜单 &raquo; 在线演示 - 前端开发仓库</title>
-<link rel="stylesheet" href="css/demo.css">
+<link rel="stylesheet" href="../css/demo.css">
 </head>
 <body>
 <header>
@@ -80,11 +80,11 @@
 
 <!-- <script src="//cdn.staticfile.org/jquery/1.7.1/jquery.min.js"></script> -->
 <script src="//cdn.staticfile.org/zepto/1.0/zepto.min.js"></script>
-<script src="js/jquery.cxselect.js"></script>
+<script src="../js/jquery.cxselect.js"></script>
 <script>
 (function() {
-  var urlChina = 'js/cityData.min.json';
-  var urlGlobal = 'js/globalData.min.json';
+  var urlChina = '../js/cityData.min.json';
+  var urlGlobal = '../js/globalData.min.json';
   var dataCustom = [
     {v: '1', n: '第一级 >', 's': [
       {v: '2', n: '第二级 >', 's': [
