--- a/demo/oneself.html
+++ b/demo/oneself.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>cxSelect 联动下拉菜单 &raquo; 在线演示 - 前端开发仓库</title>
-<link rel="stylesheet" href="css/demo.css">
+<link rel="stylesheet" href="../css/demo.css">
 </head>
 <body>
 <header>
